HFP-2561 Fix container shift on IE11
Changing the fullscreen button style prevents the shift

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -69,26 +69,26 @@ $fullscreen-button-size: 1.8em;
   .h5p-interactive-book-fullscreen-button-wrapper {
     background-color: $mud-80;
     border: 0;
-    border-radius: 100%;
-    height: $fullscreen-button-size * 2;
+    border-radius: 0 0 0 100%;
+    height: $fullscreen-button-size;
     position: absolute;
-    right: -$fullscreen-button-size;
-    top: -$fullscreen-button-size;
-    width: $fullscreen-button-size * 2;
+    right: 0;
+    top: 0;
+    width: $fullscreen-button-size;
     z-index: 3;
   }
 
   .h5p-interactive-book-fullscreen-button {
     background-color: rgba(0, 0, 0, 0);
     border: 0;
-    border-radius: 100%;
+    border-radius: 0 0 0 100%;
     font-family: 'h5p-interactive-book';
     font-size: 1em;
     height: $fullscreen-button-size;
     line-height: normal;
     position: absolute;
     text-indent: inherit;
-    top: $fullscreen-button-size;
+    top: 0;
     width: $fullscreen-button-size;
 
     &.h5p-interactive-book-enter-fullscreen {
